[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/BGM/bgm0.mp3" type="AudioStream" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 480.0
color = Color( 0.0627451, 0.0588235, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Enemy" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="command_selected" from="Player" to="." method="_on_Player_command_selected"]
[connection signal="command_selected" from="Enemy" to="." method="_on_Enemy_command_selected"]
[connection signal="pressed_start" from="HUD" to="." method="start_game"]
